updating archlinux scripts

--- a/mate-backgrounds/distro/archlinux/PKGBUILD
+++ b/mate-backgrounds/distro/archlinux/PKGBUILD
@@ -5,10 +5,10 @@ pkgdesc="Background images and data for MATE"
 arch=('any')
 license=('GPL')
 url="http://matsusoft.com.ar/projects"
-makedepends=('intltool')
+makedepends=('intltool' 'mate-common')
 groups=('mate')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('5ac6b2892eee154667f822eb4177693b94bc9e4839c413b67a7c970dababb506')
+sha256sums=('0e9fdb284c630d92374dec6e3ac24bd5f0f910dabbf8065b79920ae26bc9ab9c')
 
 build() {
     cd "${srcdir}/${pkgname}"
