--- a/mate-doc-utils/distro/archlinux/PKGBUILD
+++ b/mate-doc-utils/distro/archlinux/PKGBUILD
@@ -1,16 +1,16 @@
 pkgname=mate-doc-utils
 pkgver=2011.11.16
-pkgrel=1
+pkgrel=2
 pkgdesc="Documentation utilities for MATE"
 arch=('any')
 license=('GPL' 'LGPL')
 depends=('libxslt' 'python2' 'docbook-xml' 'rarian' 'gnome-doc-utils')
-makedepends=('pkgconfig' 'intltool')
+makedepends=('pkgconfig' 'intltool' 'mate-common')
 #conflicts=('gnome-doc-utils')
 options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('fdc4bd26f6054c6348f2952b8d6e1522d4c509df95715e6f9001896e7a3e5750')
+sha256sums=('65d29b3dff0e9770d872f66b993ef9b642ac2d1617e77c5cc156ac87f71bb1c0')
 groups=('mate')
 
 build() {
