--- a/mate-display-manager/distro/archlinux/PKGBUILD
+++ b/mate-display-manager/distro/archlinux/PKGBUILD
@@ -4,7 +4,7 @@ pkgrel=1
 pkgdesc="The MATE Display Manager"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('pam' 'libdmx' 'tcp_wrappers' 'mate-panel' 'libmatecanvas' 'librsvg' 'gksu' 'dbus-glib' 'consolekit' 'mate-dialogs')
+depends=('pam' 'libdmx' 'mate-panel' 'libmatecanvas' 'librsvg' 'gksu' 'dbus-glib' 'consolekit' 'mate-dialogs')
 makedepends=('pkgconfig' 'intltool' 'mate-doc-utils' 'xtrans' 'xorg-server')
 # do not add !emptydirs
 options=('!libtool')
@@ -15,7 +15,7 @@ source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz
         mdm
         mdm.pam
         mdm-autologin.pam)
-sha256sums=('26b3007b4453d4590e5b71e38b7527b4519e858e77034224960cf70b978da89a'
+sha256sums=('21746e46fa25e9ee33d8d44d952503916dceb828c8b5171dd704843df83f060e'
             '512de7022bd88d14cfe84b43bc29dc6f211fec28ba76e0e71470799c4292f036'
             '3f71291bcce5728373e796c02ddf3a45c69e8823044f568f23ba4241242d13f5'
             '3daff680ff6b7ea56f84f40843e46e72477c81e9e405028203c942af04d07ae5')
@@ -31,6 +31,7 @@ build() {
         --disable-static \
         --with-at-spi-registryd-directory=/usr/lib/at-spi \
         --disable-scrollkeeper \
+        --without-tcp-wrappers \
         --disable-debug || return 1
 
     make
