removing extra tabs

--- a/mate-menus/python/Makefile.am
+++ b/mate-menus/python/Makefile.am
@@ -1,13 +1,13 @@
-AM_CPPFLAGS =				\
-	$(GLIB_CFLAGS)			\
-	$(PYTHON_INCLUDES)		\
-	-I$(srcdir)/../libmenu		\
-	-DMATEMENU_I_KNOW_THIS_IS_UNSTABLE	\
-	$(DISABLE_DEPRECATED_CFLAGS)	\
+AM_CPPFLAGS = \
+	$(GLIB_CFLAGS) \
+	$(PYTHON_INCLUDES) \
+	-I$(srcdir)/../libmenu \
+	-DMATEMENU_I_KNOW_THIS_IS_UNSTABLE \
+	$(DISABLE_DEPRECATED_CFLAGS) \
 	$(DEBUG_CFLAGS)
 
-AM_CFLAGS =
-	$(WARN_CFLAGS)			\
+AM_CFLAGS = \
+	$(WARN_CFLAGS) \
 	$(NO_STRICT_ALIASING_CFLAGS)
 
 matemenudir = $(pyexecdir)
