--- a/mate-menus/distro/archlinux/PKGBUILD
+++ b/mate-menus/distro/archlinux/PKGBUILD
@@ -18,6 +18,7 @@ build() {
         --prefix=/usr \
         --sysconfdir=/etc \
         --localstatedir=/var  \
+        --enable-python \
         --disable-static || return 1
     make || return 1
 }
