removing autogenerated files

--- a/mate-file-manager/distro/archlinux/PKGBUILD
+++ b/mate-file-manager/distro/archlinux/PKGBUILD
@@ -4,7 +4,8 @@ pkgrel=1
 pkgdesc="The MATE shell and file manager"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('libexif' 'exempi' 'mate-icon-theme' 'shared-mime-info' 'desktop-file-utils' 'gvfs' 'libunique' 'mate-desktop')
+depends=('libexif' 'exempi' 'mate-icon-theme' 'shared-mime-info'
+         'desktop-file-utils' 'gvfs' 'libunique' 'mate-desktop')
 makedepends=('pkgconfig' 'intltool')
 url="http://matsusoft.com.ar/projects"
 options=('!libtool' '!emptydirs')
