--- a/mate-panel/applets/fish/Makefile.am
+++ b/mate-panel/applets/fish/Makefile.am
@@ -1,22 +1,22 @@
-AM_CPPFLAGS =							\
-	$(LIBMATE_PANEL_APPLET_CFLAGS)				\
-	$(FISH_CFLAGS)						\
-	-I$(srcdir)						\
-	-I$(srcdir)/../../libmate-panel-applet			\
-	-I$(top_builddir)/libmate-panel-applet			\
-	-DMATELOCALEDIR=\""$(prefix)/$(DATADIRNAME)/locale"\"	\
-	-DFISH_ICONDIR=\""$(fishbitmapsdir)"\"			\
-	-DFISH_BUILDERDIR=\""$(uidir)"\"			\
-	-DFISH_MENU_UI_DIR=\""$(xmluidir)"\" 			\
+AM_CPPFLAGS = \
+	$(LIBMATE_PANEL_APPLET_CFLAGS) \
+	$(FISH_CFLAGS) \
+	-I$(srcdir) \
+	-I$(srcdir)/../../libmate-panel-applet \
+	-I$(top_builddir)/libmate-panel-applet \
+	-DMATELOCALEDIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
+	-DFISH_ICONDIR=\""$(fishbitmapsdir)"\" \
+	-DFISH_BUILDERDIR=\""$(uidir)"\" \
+	-DFISH_MENU_UI_DIR=\""$(xmluidir)"\" \
 	$(DISABLE_DEPRECATED_CFLAGS)
 
 AM_CFLAGS = $(WARN_CFLAGS)
 
 FISH_SOURCES = fish.c
 
-FISH_LDADD =						\
-	../../libmate-panel-applet/libmate-panel-applet-3.la	\
-	$(FISH_LIBS)					\
+FISH_LDADD = \
+	../../libmate-panel-applet/libmate-panel-applet-3.la \
+	$(FISH_LIBS) \
 	$(LIBMATE_PANEL_APPLET_LIBS)
 
 if FISH_INPROCESS
@@ -64,22 +64,23 @@ org.mate.panel.applet.FishAppletFactory.service: $(service_in_files)
 endif
 
 fishbitmapsdir = $(datadir)/mate-panel/pixmaps
-fishbitmaps_DATA = 	\
-	wanda.png	\
-	fishanim.png	\
-	oldwanda.png	\
-	footguy.png	\
-	monkey.png
+fishbitmaps_DATA = \
+	wanda.png \
+	fishanim.png \
+	oldwanda.png \
+	footguy.png \
+	monkey.png \
+	nyan.png
 
-uidir		= $(datadir)/mate-panel/ui
-ui_DATA		= fish.ui
+uidir = $(datadir)/mate-panel/ui
+ui_DATA = fish.ui
 
-xmluidir 	= $(datadir)/mate-panel/ui
-xmlui_DATA	= fish-menu.xml
+xmluidir = $(datadir)/mate-panel/ui
+xmlui_DATA = fish-menu.xml
 
-schemasdir       = $(MATECONF_SCHEMA_FILE_DIR)
+schemasdir = $(MATECONF_SCHEMA_FILE_DIR)
 schemas_in_files = fish.schemas.in
-schemas_DATA     = $(schemas_in_files:.schemas.in=.schemas)
+schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
 
 @INTLTOOL_SCHEMAS_RULE@
 
@@ -96,13 +97,13 @@ uninstall-local:
 	done
 endif
 
-EXTRA_DIST =						\
-	wanda.svg					\
-	$(fishbitmaps_DATA)				\
-	org.mate.panel.FishApplet.mate-panel-applet.in.in	\
-	$(service_in_files)				\
-	fish.schemas.in					\
-	$(ui_DATA)					\
+EXTRA_DIST = \
+	wanda.svg \
+	$(fishbitmaps_DATA) \
+	org.mate.panel.FishApplet.mate-panel-applet.in.in \
+	$(service_in_files) \
+	fish.schemas.in \
+	$(ui_DATA) \
 	$(xmlui_DATA)
 
 CLEANFILES = $(schemas_DATA) $(applet_DATA) $(applet_DATA).in $(service_DATA)
