adding sakura and Terminal to the list fo terminals

--- a/mate-control-center/capplets/default-applications/mate-default-applications.xml.in
+++ b/mate-control-center/capplets/default-applications/mate-default-applications.xml.in
@@ -243,6 +243,34 @@
     </mail-reader>
   </mail-readers>
 
+	<!-- agregando para los ... -->
+	<file-managers>
+		<file-manager>
+			<_name>Mate File Manager</_name>
+			<executable>caja</executable>
+			<run-in-terminal>false</run-in-terminal>
+			<command>caja %s</command>
+			<icon-name>file-manager</icon-name>
+		</file-manager>
+
+		<file-manager>
+			<_name>Nautilus</_name>
+			<executable>nautilus</executable>
+			<run-in-terminal>false</run-in-terminal>
+			<command>nautilus %s</command>
+			<icon-name>nautilus</icon-name>
+		</file-manager>
+
+		<file-manager>
+			<_name>Thunar</_name>
+			<executable>thunar</executable>
+			<run-in-terminal>false</run-in-terminal>
+			<command>thunar %s</command>
+			<icon-name>thunar</icon-name>
+		</file-manager>
+
+	</file-managers>
+
   <terminals>
     <terminal>
       <_name>Debian Terminal Emulator</_name>
@@ -255,7 +283,14 @@
       <_name>MATE Terminal</_name>
       <executable>mate-terminal</executable>
       <command>mate-terminal</command>
-      <icon-name>mate-terminal</icon-name>
+      <icon-name>utilities-terminal</icon-name>
+      <exec-flag>-x</exec-flag>
+    </terminal>
+    <terminal>
+      <_name>GNOME Terminal</_name>
+      <executable>gnome-terminal</executable>
+      <command>gnome-terminal</command>
+      <icon-name>gnome-terminal</icon-name>
       <exec-flag>-x</exec-flag>
     </terminal>
     <terminal>
@@ -307,6 +342,20 @@
        <icon-name>konsole</icon-name>
        <exec-flag>-e</exec-flag>
      </terminal>
+		<terminal>
+			<_name>Terminal</_name>
+			<executable>terminal</executable>
+			<command>terminal</command>
+			<icon-name>utilities-terminal</icon-name>
+			<exec-flag>-e</exec-flag>
+		</terminal>
+		<terminal>
+			<_name>Sakura</_name>
+			<executable>sakura</executable>
+			<command>sakura</command>
+			<icon-name>terminal-tango</icon-name>
+			<exec-flag>-e</exec-flag>
+		</terminal>
   </terminals>
 
   <media-players>
