--- a/mate-control-center/distro/archlinux/PKGBUILD
+++ b/mate-control-center/distro/archlinux/PKGBUILD
@@ -4,10 +4,13 @@ pkgrel=1
 pkgdesc="The Control Center for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('mate-window-manager' 'libxss' 'desktop-file-utils' 'mate-settings-daemon' 'libmatekbd' 'libcanberra' 'sound-theme-freedesktop' 'libunique' 'mate-menus' 'librsvg') #  'evolution-data-server>=2.29.92'
+depends=('mate-window-manager' 'libxss' 'desktop-file-utils'
+         'mate-settings-daemon' 'libmatekbd' 'libcanberra'
+         'sound-theme-freedesktop' 'libunique' 'mate-menus'
+         'librsvg') #  'evolution-data-server>=2.29.92'
 makedepends=('mate-doc-utils' 'pkgconfig' 'intltool')
 options=('!emptydirs' '!libtool')
-url="http://matsusoft.com.ar/projects"
+url="http://matsusoft.com.ar/projects/mate/"
 groups=('mate')
 install=mate-control-center.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
