--- a/mate-control-center/configure.ac
+++ b/mate-control-center/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([mate-control-center], [2011.11.27], [https://github.com/perberos/mate-desktop-environment])
+AC_INIT([mate-control-center], [2011.11.28], [https://github.com/perberos/mate-desktop-environment])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([shell])
@@ -313,6 +313,20 @@ AC_ARG_ENABLE(update-mimedb,
                    enable_update_mimedb=yes)
 AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)
 
+dnl ****************************************************************************
+dnl * using Ubuntu hacks
+dnl ****************************************************************************
+AC_ARG_ENABLE(ubuntu,
+	AS_HELP_STRING([--enable-ubuntu], [Enable Ubuntu Counter Hacks]), enable_ubuntu=yes, enable_ubuntu=no)
+
+if test "x$enable_ubuntu" = "xyes" ; then
+	# we define a UBUNTU on code
+	MATE_DESKTOP_CFLAGS="$MATE_DESKTOP_CFLAGS -DUBUNTU"
+
+	ENABLE_UBUNTU=yes
+else
+	ENABLE_UBUNTU=no
+fi
 
 AC_CONFIG_FILES([
 Makefile
