--- a/mate-backgrounds/distro/archlinux/PKGBUILD
+++ b/mate-backgrounds/distro/archlinux/PKGBUILD
@@ -4,7 +4,7 @@ pkgrel=1
 pkgdesc="Background images and data for MATE"
 arch=('any')
 license=('GPL')
-url="http://matsusoft.com.ar/projects"
+url="http://matsusoft.com.ar/projects/mate"
 makedepends=('intltool' 'mate-common')
 groups=('mate')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
