--- a/mate-desktop/distro/archlinux/PKGBUILD
+++ b/mate-desktop/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-desktop
-pkgver=2011.11.16
+pkgver=2011.11.28
 pkgrel=1
 pkgdesc="Library with common API for various MATE modules"
 arch=(i686 x86_64)
@@ -7,7 +7,7 @@ license=(GPL LGPL)
 depends=('libunique' 'libmatenotify' 'hicolor-icon-theme' 'gvfs-obexftp' 'obexd-client' 'mate-conf')
 makedepends=('mate-doc-utils' 'intltool')
 options=('!emptydirs' '!libtool')
-url="http://matsusoft.com.ar/projects"
+url="http://matsusoft.com.ar/projects/mate/"
 groups=('mate')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('33640476894500a291bc60c421028e31a3a952f26ea08f35fe989fc8355ba590')
