--- a/mate-window-manager/distro/ubuntu/build
+++ b/mate-window-manager/distro/ubuntu/build
@@ -2,7 +2,7 @@
 
 # fill it
 pkgname=mate-window-manager
-pkgver=2011.10.29
+pkgver=2011.11.28
 pkgrel=1
 pkgdesc="A window manager for MATE"
 depends=('mate-conf' 'mate-dialogs' 'libgtop2-7' 'libwnck22')
@@ -14,10 +14,16 @@ build() {
 	# entramos a la carpeta
 	cd ${pkgname}
 
-	./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
-		--libexecdir=/usr/lib/${pkgname} --disable-static \
-		--disable-startup-notification  --disable-scrollkeeper || return 1
-	make
+    ./autogen.sh \
+        --prefix=/usr \
+        --sysconfdir=/etc \
+        --localstatedir=/var \
+        --libexecdir=/usr/lib/${pkgname} \
+        --disable-static \
+        --disable-startup-notification \
+        --disable-scrollkeeper || return 1
+    make || return 1
+
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install
 
 	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
