using the text instead of a var

--- a/mate-window-manager/distro/archlinux/PKGBUILD
+++ b/mate-window-manager/distro/archlinux/PKGBUILD
@@ -22,7 +22,7 @@ build() {
         --prefix=/usr \
         --sysconfdir=/etc \
         --localstatedir=/var \
-        --libexecdir=/usr/lib/${pkgname} \
+        --libexecdir=/usr/lib/mate-window-manager \
         --disable-static \
         --disable-startup-notification \
         --disable-scrollkeeper || return 1
