mate-window-manager was renamed to marco

--- a/AUR/mate-control-center/PKGBUILD
+++ b/AUR/mate-control-center/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1
 pkgdesc="The Control Center for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('mate-window-manager' 'libxss' 'desktop-file-utils'
+depends=('marco' 'libxss' 'desktop-file-utils'
          'mate-settings-daemon' 'libmatekbd' 'libcanberra'
          'sound-theme-freedesktop' 'libunique' 'mate-menus'
          'librsvg') #  'evolution-data-server>=2.29.92'
